2004-02-10  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* aclocal.m4, configure(.in), config.h.in, Makefile.{am,in},
	  {autoconf,configs,doc(/{C,ja_JP.ujis}),
	  interface(/bitmaps)}/Makefile.in:
	  Sorry, revert fix due to make dist problem

2004-02-10  Kouji 'kekyo' Suzuki <k@kekyo.net>

	* interface/rtsyn_winmm.c, interface/w32g_i.c,
	  interface/w32g_ini.c, interface/w32g_pref.c,
	  interface/w32g_res.[ch], interface/w32g_syn.c,
	  interface/w32g_utl.[ch], interface/w32g.h:
	  Add process-priority function to TWSYNG.
	* configs/msc7-project.zip, timidity/calcnewt.c: Fix.

2004-02-09  mput <root@mput.dip.jp>

	* Makefile.am (install-data-local): ditto
	* configure.in: Add --with-ad-dir=DIR

2004-02-09  Saito <saito2@digitalme.com>

	* interface/w32g_pref.c, interface/w32g_subwin3.c,
	  interface/w32g_res.h, interface/w32g_res.rc,
	  interface/w32g_utl.[ch], interface/w32g_ini.c:
	  Fix Win32GUI preference window.
	  Add opt_default_module to Win32GUI preference.
	* timidity/playmidi.c, timidity/reverb.c:
	  Change behaviour of opt_effect_quality.

2004-02-09  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* INSTALL(.ja): Fix a little
	* doc/C/timidity.1, doc/ja_JP.ujis/timidity.1:
	  Update man page of timidity.1
	* timidity/playmidi.c (select_play_sample):
	  Fix determination method of frequency for sample selection
	  Hack up around select_play_sample

2004-02-08  Daisuke Aoki <dai@sweetparty.ne.jp>

	* timidity/sndfont.c: Fix cfgforsf.

2004-02-08  Saito <saito2@digitalme.com>

	* interface/w32g_tracer.bmp, interface/w32g_subwin3.c,
	  timidity/playmidi.c:
	  Change tracer window.
	* configs/msc[67]-project.zip:
	  Fix projects for cfgforsf.

2004-02-07  Saito <saito2@digitalme.com>

	* timidity/sysdep.h:
	  Add some #pragma warning for VC environment.
	* interface/w32g_tracer.bmp:
	  Fix.

2004-02-07  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/calcnewt.c: Fix to fit with Cygwin

2004-02-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configs/Makefile.{am,in}: